Updated coding and Fig 7

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d9afee1c",
+   "id": "0f44a9ef",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "91e1a3d1",
+   "id": "22b0c6ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9704d1c7",
+   "id": "8f53a2dd",
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "64e3a2ae",
+   "id": "21b4fc53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "81dad252",
+   "id": "3190fa4c",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "48bb4ae3",
+   "id": "1a5aa2d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "698b6ed5",
+   "id": "67298661",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1abc150a",
+   "id": "b725ca6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "eb17ddf3",
+   "id": "d64ea4dc",
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2fd85a29",
+   "id": "a790e997",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7f104d31",
+   "id": "44bc3d86",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "523af1fb",
+   "id": "9c22f59c",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "44056506",
+   "id": "c56d5e12",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "654284bb",
+   "id": "53b0a0d8",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1dbeb029",
+   "id": "b0ae5c33",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9de0b5c9",
+   "id": "a0f3db0f",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8ab3e853",
+   "id": "0a20d3b5",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "27e5929a",
+   "id": "6a0cbdb7",
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "de0cab55",
+   "id": "ee31a2b9",
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b915924e",
+   "id": "b0bea589",
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1752690f",
+   "id": "a0de1108",
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c266e428",
+   "id": "7af5f2b4",
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "af9ca992",
+   "id": "baaee197",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4f6cbc7a",
+   "id": "be70e1c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "36da7c2b",
+   "id": "8cff9dbe",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6102245d",
+   "id": "7b6ba9f6",
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6f5bb68b",
+   "id": "14d5f3d6",
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2c67813d",
+   "id": "e705bfd7",
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b42ee1e0",
+   "id": "a55e3328",
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a107d85a",
+   "id": "883bfaed",
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "515f2f1a",
+   "id": "0c195d1d",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "61517134",
+   "id": "b38ec3de",
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "795c2325",
+   "id": "76a55eda",
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "139125eb",
+   "id": "8f6a4be7",
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "26b24488",
+   "id": "9d3705da",
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1721,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "590750d3",
+   "id": "1151ade3",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a8d6f0d2",
+   "id": "078da694",
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2d988b82",
+   "id": "f5557769",
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c5468e52",
+   "id": "c40bc830",
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "3cc77a25",
+   "id": "db81ca61",
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1853,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e6b42af9",
+   "id": "3097c63a",
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1885,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a7271ad9",
+   "id": "ff97546e",
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "466b79a2",
+   "id": "68555edf",
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "40ac38c0",
+   "id": "df27cacf",
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6a727881",
+   "id": "2337c667",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "be1912ae",
+   "id": "f3e34b4f",
    "metadata": {},
    "outputs": [
     {
@@ -2090,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "df97517e",
+   "id": "3d7eb8ea",
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2149,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "1a7c95b9",
+   "id": "bde7afc6",
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2186,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "646800e6",
+   "id": "20c2cb26",
    "metadata": {},
    "outputs": [
     {
@@ -2245,7 +2245,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0a433f5c",
+   "id": "e1b18fc9",
    "metadata": {},
    "outputs": [
     {
@@ -2304,7 +2304,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "1cb4839b",
+   "id": "10686735",
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "39fb93c4",
+   "id": "fda833cd",
    "metadata": {},
    "outputs": [
     {
@@ -2400,7 +2400,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "92cb5485",
+   "id": "cfb40f74",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2427,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "bc89377e",
+   "id": "802f72aa",
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2450,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "dc53025e",
+   "id": "af6f447a",
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "18ba3e10",
+   "id": "a56bf1bd",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "72c8b47c",
+   "id": "198acfff",
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "be65b67c",
+   "id": "dec1eeae",
    "metadata": {},
    "outputs": [
     {
@@ -2557,7 +2557,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "963ccbd3",
+   "id": "db002ae4",
    "metadata": {},
    "outputs": [
     {
@@ -2594,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "070b751b",
+   "id": "ca2e667a",
    "metadata": {},
    "outputs": [
     {
@@ -2621,7 +2621,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "b28a0797",
+   "id": "67432279",
    "metadata": {},
    "outputs": [
     {
@@ -2651,6 +2651,29 @@
     "plt.savefig(\"analysis/Fig6.png\")\n",
     "# Show Figure\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "6c694e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-104-5545b8191b9a>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-104-5545b8191b9a>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    driver_percents = 100 *\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of drivers for each city type.\n",
+    "driver_percents = 100 *\n",
+    "city_data_df.groupby([\"type\"]).sum()[\"driver_count\"] /\n",
+    "city_data_df[\"driver_count\"].sum()\n",
+    "driver_percents"
    ]
   }
  ],
